# valkey-glide

./: .clippy.toml  .editorconfig  .eslintignore  .eslintrc.cjs  .gitallowed  .gitattributes  .gitignore  .gitmodules  .prettierignore  2_README_PYTHON_REVIEW.md  3_PYTHON_WIKI.md  404.html  AGENTS.md  AmazonQ.md  BATCH_IMPLEMENTATION_DESIGN.md  BRANCH_CONTEXT.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CREATING_ISSUES.md  DO_NOT_FORGET.md  Dockerfile.test  JAVA_JNI_MIGRATION_OVERVIEW.md  JNI_CODE_REVIEW.md  JNI_IMPLEMENTATION_OVERVIEW.md  JNI_IMPLEMENTATION_PLAN.md  JNI_TASK_SPECIFICATION.md  LICENSE  Makefile  NODE_SOCKET_REFERENCE_CONTEXT.md  NODE_SOCKET_TEST_RESULTS.md  NODE_WIKI.md  NOTICE  PICKING_UP_ISSUES.md  PR_DRAFT.md  README.md  REDIS_WINDOWS_FIX.md  RELEASE.md  RELEASING.md  (+40 more)
JNI-java/rust-layer/: Cargo.toml
babushka-core/: Cargo.toml  README.md  build.rs
babushka-core/.cargo/: config.toml
babushka-core/benches/: connections_benchmark.rs  memory_benchmark.rs
babushka-core/examples/: async-connection.rs
babushka-core/src/: client.rs  headers.rs  headers_legacy.rs  lib.rs  retry_strategies.rs  rotating_buffer.rs  rotating_buffer_legacy.rs  socket_listener.rs  socket_listener_impl.rs  socket_listener_legacy.rs
babushka-core/tests/: test_client.rs  test_client_cluster.rs  test_client_cmd.rs  test_client_cme.rs  test_cluster_client.rs  test_logger.rs  test_socket_listener.rs  test_standalone_client.rs
benchmarks/rust/: Cargo.toml
cpp/: .clang-format  CMakeLists.txt  Cargo.toml  DEVELOPER.md  README.md  cbindgen.toml  shell.nix
cpp/benchmarks/: CMakeLists.txt  benchmark.cc
cpp/docs/: Doxyfile
cpp/examples/: CMakeLists.txt  main.cc
cpp/src/: callback.cc  client.cc  command.cc  config.cc  connection_request.pb.cc  future.cc  helper.cc  lib.rs
cpp/tests/: CMakeLists.txt  client_test.cc
csharp/lib/: AsyncClient.cs  AsyncSocketClient.cs  AsyncSocketClientBase.cs  AsyncSocketClientDirect.cs  BaseClient.cs  Cargo.toml  ConnectionConfiguration.cs  Directory.Packages.props  Errors.cs  GlideClient.cs  GlideClusterClient.cs  GlideString.cs  Logger.cs  Message.cs  MessageContainer.cs  RedisValue.cs  Route.cs  babushka.csproj  deny.toml  glide.csproj
ffi/: .gitignore  Cargo.toml  DEVELOPER.md  Dockerfile.test  README.md  cbindgen.toml  lib.h
ffi/.cargo/: config.toml
ffi/miri-tests/: Cargo.toml  README.md  rust-toolchain.toml
ffi/src/: lib.rs
ffi/tests/: ffi_client_tests.rs  test_create_client_from_uri.rs  test_enhanced_error_handling.rs  test_otel_ffi_integration.rs
glide-core/: BENCHMARK_CLARIFICATION.md  BENCHMARK_EXAMPLES.md  BENCHMARK_RESULTS.md  BENCHMARK_SUMMARY.md  CORRECTED_IMPLEMENTATION.md  Cargo.toml  DATABASE_TRACKING.md  DIRECT_MODE_EXAMPLES.md  DTRACE_PROFILING_RESULTS.md  Dockerfile.test  Dockerfile.test.dockerignore  GET_BENCHMARK.md  README.md  SOCKET_REFERENCE_DESIGN.md  THIRD_PARTY_LICENSES_RUST  VISUAL_PROFILING_RESULTS.md  build.rs  run_get_benchmark.sh  staged_changes.diff  test_get_benchmark.sh
glide-core/benches/: connections_benchmark.rs  ffi_comparison.rs  ffi_protobuf_benchmark.rs  get_benchmark.rs  get_benchmark_efficient.rs  memory_benchmark.rs  rotating_buffer_benchmark.rs
glide-core/cache/: Cargo.toml
glide-core/examples/: comparison_profile.rs  detailed_ffi_profile.rs  detailed_profile.rs  direct_profile.rs  ffi_benchmark.rs  ffi_profile.rs  visual_profile.rs
glide-core/redis-rs/: Cargo.toml  README.md  appveyor.yml  get_command_info.py
glide-core/src/: client_cache.rs  cluster_scan_container.rs  compression.rs  errors.rs  glide_paths.rs  lib.rs  mock_pubsub.rs  otel_db_semantics.rs  request_type.rs  retry_strategies.rs  rotating_buffer.rs  scripts_container.rs  socket_listener.rs  (+1 more)
go/: .gitignore  .ort.yml  AGENTS.md  COMMAND_COMPARISON.md  Cargo.toml  DEVELOPER.md  Makefile  PPRelease.md  README.md  THIRD_PARTY_LICENSES_GO  base_client.go  batch_test.go  bitmap_commands_test.go  callbacks.go  cbindgen.toml  compression_example_test.go  connection_management_cluster_commands_test.go  connection_management_commands_test.go  create_client_test.go  errors.go  example_utils.go  ft.go  ft_commands_test.go  generic_base_commands_test.go  generic_cluster_commands_test.go  generic_commands_test.go  geospacial_commands_test.go  glide_client.go  glide_cluster_client.go  go.mod  go.sum  hash_commands_test.go  hyperloglog_commands_test.go  lib.h  list_commands_test.go  opentelemetry.go  opentelemetry_examples_test.go  opentelemetry_public_api_test.go  pinner.go  pinner_test.go  (+16 more)
java/: .gitignore  .ort.yml  AGENTS.md  CLEANUP_LOG.md  CLEANUP_PLAN.md  CONTEXT_CLEANUP_FINAL.md  CONTEXT_CLEANUP_STATUS.md  CURRENT_STATUS.md  CURRENT_STATUS_COMPLETE.md  Cargo.toml  DEVELOPER.md  DirectByteBufferTest.java  ENHANCED_JEDIS_COMPATIBILITY.md  FinalTestReport.md  HANDOVER.md  HANDOVER_COMPLETE_ANALYSIS.md  HANDOVER_CONTEXT.md  HANDOVER_DOCUMENT.md  INTEGRATION_TEST_FIXES.md  INTEGRATION_TEST_RESULTS.md  IntegrationTest.java  JEDIS_COMPATIBILITY_COMPLETE_GUIDE.md  JEDIS_WRAPPER_README.md  JNI_HANDOVER_REPORT.md  JNI_MIGRATION_STATUS.md  MEMORY_FIX_SESSION_SUMMARY.md  MISSING_API_COMPONENTS.md  MISSING_CLASSES_ANALYSIS.md  MISSING_COMMANDS_INVENTORY.md  NEXT_SESSION_CHECKLIST.md  NEXT_STEPS_PLAN.md  PACKAGE_RENAME_SUMMARY.md  PLACEHOLDER_IMPLEMENTATIONS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_STATUS.md  REORGANIZATION_PLAN.md  SESSION_HANDOFF.md  STATUS_VALIDATION.md  ScriptRedesignPlan.md  (+15 more)
logger_core/: Cargo.toml  deny.toml
python/: .flake8  .gitignore  .ort.yml  AGENTS.md  Cargo.toml  DEVELOPER.md  Dockerfile.test  Dockerfile.test.dockerignore  INSTALL  Pipfile  README.md  THIRD_PARTY_LICENSES_PYTHON  TLS_CERTIFICATE_USAGE.md  TLS_IMPLEMENTATION_SUMMARY.md  TRANSACTION_COMMANDS.md  dev.py  dev_requirements.txt  index.html  pyproject.toml  pytest.ini  requirements.txt  setup.py
rust/: Cargo.toml  README.md
rust-jni/: BENCHMARK_RESULTS.md  Cargo.toml  JniBenchmark.java  benchmark_output.txt  benchmark_results.md  benchmark_results.txt  simple_benchmark.java  test_jni.java  test_simple.sh
(+4023 files in other folders)
