[package]
name = "babushka"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "^1.4"
bytes = "^1.3"
futures = "^0.3"
lifeguard = "^0.6"
num-derive = "^0.3"
num-traits = "^0.2"
redis = { path = "../submodules/redis-rs/redis", features = ["aio", "tokio-comp", "tls", "tokio-native-tls-comp"] }
signal-hook = "^0.3"
signal-hook-tokio = {version = "^0.3", features = ["futures-v0_3"] }
futures-util = { version = "0.3.15", default-features = false, optional = true }
pin-project-lite = { version = "0.2", optional = true }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "net"] }
logger_core = {path = "../logger_core"}
dispose = "0.4.0"
tokio-util = {version = "^0.7", features = ["rt"]}
num_cpus = "^1.15"


[dev-dependencies]
rand = "0.8.5"
rsevents = "0.3.1"
socket2 = "0.4.7"
tempfile = "3.3.0"
rstest = "0.16.0"

[features]
default = []
instrument = []
protobuf = []
bcore-connection = []

[[example]]
name = "simple-connection"
required-features = ["bcore-connection"]

[[example]]
name = "async-connection"
required-features = ["bcore-connection"]
