[package]
name = "babushka"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "^1.4"
bytes = "^1.3"
futures = "^0.3"
lifeguard = "^0.6"
num-derive = "^0.3"
num-traits = "^0.2"
redis = { path = "../submodules/redis-rs/redis", features = ["aio", "tokio-comp", "tls", "tokio-native-tls-comp", "connection-manager","cluster", "cluster-async"] }
signal-hook = "^0.3"
signal-hook-tokio = {version = "^0.3", features = ["futures-v0_3"] }
tokio = { version = "1", features = ["macros", "time"] }
logger_core = {path = "../logger_core"}
dispose = "0.4.0"
tokio-util = {version = "^0.7", features = ["rt"]}
num_cpus = "^1.15"
tokio-retry = "0.3.0"
protobuf = "3"
integer-encoding = "3.0.4"
thiserror = "1"
rand = "0.8.5"
futures-intrusive = "0.5.0"

[dev-dependencies]
rsevents = "0.3.1"
socket2 = "0.4.7"
tempfile = "3.3.0"
rstest = "0.16.0"
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"

[[bench]]
name = "connections_benchmark"
harness = false
