[package]
name = "babushka"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^1.3"
futures = "^0.3"
num-traits = "^0.2"
redis = { path = "../submodules/redis-rs/redis", features = ["aio", "tokio-comp", "tls", "tokio-rustls-comp", "connection-manager","cluster", "cluster-async"] }
signal-hook = "^0.3"
signal-hook-tokio = {version = "^0.3", features = ["futures-v0_3"] }
tokio = { version = "1", features = ["macros", "time"] }
logger_core = {path = "../logger_core"}
dispose = "0.5.0"
tokio-util = {version = "^0.7", features = ["rt"]}
num_cpus = "^1.15"
tokio-retry = "0.3.0"
protobuf = {version= "3", features = ["bytes", "with-bytes"]}
integer-encoding = "4.0.0"
thiserror = "1"
rand = "0.8.5"
futures-intrusive = "0.5.0"
directories = "5.0"

[dev-dependencies]
rsevents = "0.3.1"
socket2 = "^0.5"
tempfile = "3.3.0"
rstest = "^0.17"
criterion = { version = "^0.5", features = ["html_reports", "async_tokio"] }
which = "4.4.0"
ctor = "0.2.2"
redis = { path = "../submodules/redis-rs/redis", features = ["tls-rustls-insecure"] }
iai-callgrind = "0.6"
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1.18.0"

[build-dependencies]
protobuf-codegen = "3"

[[bench]]
name = "rotating_buffer_benchmark"
harness = false

[[bench]]
name = "connections_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false
