[package]
name = "glide-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Valkey GLIDE Maintainers"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
protobuf = { version = "3", features = [] }
redis = { path = "../glide-core/redis-rs/redis", features = ["aio", "tokio-comp", "tokio-rustls-comp"] }
glide-core = { path = "../glide-core", features = ["proto"] }
tokio = { version = "^1", features = ["rt", "macros", "rt-multi-thread", "time"] }

[dev-dependencies]
rstest = "^0.23"
serial_test = "3"
lazy_static = "1"

[profile.release]
opt-level = 3         # Optimize for performance
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
strip = "symbols"     # Remove symbol
