[package]
name = "glide-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Valkey GLIDE Maintainers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["v4", "fast-rng"] }
bytes = "1"
futures = "^0.3"
redis = { path = "./redis-rs/redis", features = [
    "aio",
    "keep-alive",
    "tokio-comp",
    "tokio-rustls-comp",
    "connection-manager",
    "cluster",
    "cluster-async",
] }
telemetrylib = { path = "./telemetry" }
tokio = { version = "1", features = ["macros", "time"] }
logger_core = { path = "../logger_core" }
tokio-util = { version = "^0.7", features = ["rt"], optional = true }
num_cpus = { version = "^1", optional = true }
tokio-retry2 = { version = "0.5", features = ["jitter"] }

protobuf = { version = "3", features = [
    "bytes",
    "with-bytes",
], optional = true }
integer-encoding = { version = "4", optional = true }
thiserror = "2"
rand = { version = "0.8" }
futures-intrusive = "0.5"
directories = { version = "6", optional = true }
once_cell = "1"
sha1_smol = "1"
nanoid = "0.4"
async-trait = { version = "0.1" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
versions = "7"

[features]
proto = ["protobuf"]
socket-layer = [
    "proto",
    "directories",
    "integer-encoding",
    "num_cpus",
    "tokio-util",
]
standalone_heartbeat = []

[dev-dependencies]
rsevents = "0.3.1"
socket2 = "^0.5"
tempfile = "3.3.0"
rstest = "^0.25"
serial_test = "3"
criterion = { version = "^0.6", features = ["html_reports", "async_tokio"] }
which = "8"
ctor = "0.4"
redis = { path = "./redis-rs/redis", features = ["tls-rustls-insecure"] }
rustls = { version = "0.23", features = ["aws-lc-rs"]}
iai-callgrind = "0.14"
tokio = { version = "1", features = ["rt-multi-thread"] }
glide-core = { path = ".", features = [
    "socket-layer",
] } # always enable this feature in tests.

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(standalone_heartbeat)'] }

[build-dependencies]
protobuf-codegen = "3"

[[bench]]
name = "rotating_buffer_benchmark"
harness = false

[[bench]]
name = "connections_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false
