[package]
name = "glide-jni"
version = "0.1.0"
edition = "2021"
description = "High-performance JNI bindings for Valkey Glide"
license = "Apache-2.0"

[lib]
name = "glidejni"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
redis = { path = "../glide-core/redis-rs/redis", features = ["tokio-comp"] }
logger_core = { path = "../logger_core" }
# High performance dependencies
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
# High-performance lock-free channels
crossbeam = "0.8"
crossbeam-channel = "0.5"
# System capabilities detection for dynamic worker scaling
num_cpus = "1.0"

[dependencies.glide-core]
path = "../glide-core"
features = ["standalone_heartbeat"]

[dependencies.telemetrylib]
path = "../glide-core/telemetry"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1
