[package]
name = "glide-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Valkey GLIDE Maintainers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
redis = { path = "../glide-core/redis-rs/redis", features = ["aio", "tokio-comp", "connection-manager", "tokio-rustls-comp"] }
glide-core = { path = "../glide-core", features = ["socket-layer"] }
tokio = { version = "^1", features = ["rt", "macros", "rt-multi-thread", "time"] }
logger_core = { path = "../logger_core" }
tracing-subscriber = "0.3.16"
jni = "0.21.1"
log = "0.4.20"
bytes = { version = "1.6.0" }
serde = "1.0.219"

[profile.release]
opt-level = 3         # Optimize for performance
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
strip = "symbols"     # Remove symbol

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ffi_test)'] }
