[package]
name = "logger_core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Amazon Web Services"]

[lib]

[dev-dependencies]
rand = "0.8.5"
test-env-helpers = "0.2.2"

[dependencies]
tracing = "0.1"
tracing-appender = "0.2.2"
once_cell = "1.16.0"
file-rotate = "0.7.1"
tracing-subscriber = "0.3.17"
