[package]
name = "logger_core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Valkey GLIDE Maintainers"]

[lib]

[dev-dependencies]
rand = "0.8.5"
test-env-helpers = "0.2.2"

[dependencies]
tracing = "0.1"
tracing-appender = { version = "0.2.3", default-features = false }
once_cell = "1.16.0"
file-rotate = "0.7.1"
tracing-subscriber = "0.3.17"
