[package]
name = "glide-for-redis"
version = "255.255.255"
edition = "2021"
license = "Apache-2.0"
authors = ["Amazon Web Services"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "glide"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.20", features = ["extension-module", "num-bigint"] }
redis = { path = "../submodules/redis-rs/redis", features = ["aio", "tokio-comp", "connection-manager","tokio-rustls-comp"] }
glide-core = { path = "../glide-core" }
logger_core = {path = "../logger_core"}

[package.metadata.maturin]
python-source = "python"

[profile.release]
lto = true
debug = true
