[package]
name = "valkey-glide"
version = "255.255.255"
edition = "2021"
license = "Apache-2.0"
authors = ["Valkey GLIDE Maintainers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "glide"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.22", features = [
    "extension-module",
    "num-bigint",
    "gil-refs",
] }
bytes = { version = "^1.8" }
redis = { path = "../glide-core/redis-rs/redis", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
    "tokio-rustls-comp",
] }
glide-core = { path = "../glide-core", features = ["socket-layer"] }
logger_core = { path = "../logger_core" }

[package.metadata.maturin]
python-source = "python"

[profile.release]
lto = true
debug = true
