[build-system]
requires = ["maturin==1.9.1"]
build-backend = "maturin"

[project]
name = "valkey-glide"
dynamic = ["version"]
description = "An open source Valkey client library that supports Valkey and Redis open source 6.2, 7.0, 7.2 and 8.0."
requires-python = ">=3.9"
dependencies = [
    # Note: If you add a dependency here, make sure to also add it to requirements.txt
    # Once issue https://github.com/aboutcode-org/python-inspector/issues/197 is resolved, the requirements.txt file can be removed.
    "anyio>=4.9.0",
    "typing-extensions>=4.8.0; python_version < '3.11'",
    "protobuf>=3.20",
]

classifiers = [
    "Topic :: Database",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "Framework :: AnyIO",
]

[tool.isort]
profile = "black"
skip = [".env", "glide-shared/glide_shared/protobuf", "build"]
known_first_party = ["glide-sync", "glide-async", "glide-shared", "tests"]

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.mypy]
exclude = "^(.*\\/)?(\\.env|glide-shared/glide_shared/protobuf|utils/release-candidate-testing|target|ort|build)(\\/|$)"
