[package]
name = "glide-jni"
version = "0.1.0"
edition = "2021"
description = "JNI bindings for Valkey Glide"
license = "Apache-2.0"

[lib]
name = "glidejni"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
log = "0.4.20"
thiserror = "2"
once_cell = "1.18.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
bytes = "1.5.0"
anyhow = "1.0.79"
url = "2.4.1"

[dependencies.glide-core]
path = "../glide-core"
