[package]
name = "valkey_glide"
version = "1.0.0"
edition = "2024"
authors = ["Valkey GLIDE Project Contributors"]
description = "High-performance JNI bindings for Valkey GLIDE"
license = "Apache-2.0"

[lib]
name = "valkey_glide"
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
glide-core = { path = "../../glide-core" }
redis = { path = "../../glide-core/redis-rs/redis", default-features = false, features = ["aio", "tokio-comp", "cluster", "cluster-async"] }
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
logger_core = { path = "../../logger_core" }
telemetrylib = { path = "../../glide-core/telemetry" }

# JNI bindings
jni = "0.21"

# High-performance data structures - CRITICAL for scaling
dashmap = "6.0"           # Lock-free concurrent HashMap
parking_lot = "0.12"      # High-performance synchronization

anyhow = "1.0"           # Error handling
log = "0.4.28"              # Logging
scopeguard = "1.2"       # RAII scope guards for cleanup

# Serialization optimizations
bincode = "2.0"          # High-performance binary serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"       # JSON serialization for statistics
# jemalloc dependencies - excluded on Windows
[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }
tikv-jemalloc-ctl = { version = "0.6.0", optional = true }

[dev-dependencies]
crc32fast = "1.4"

[features]
# Performance features - jemalloc only on non-Windows platforms
fast-alloc = ["tikv-jemallocator", "tikv-jemalloc-ctl"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true