[package]
name = "babushka_csharp"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
debug = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
redis = { path = "../../redis-rs", features = ["aio", "tokio-comp"] }
tokio = { version = "^1", features = ["rt", "macros", "rt-multi-thread", "time"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
