[package]
name = "miri-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
protobuf = { version = "3", features = [] }
redis = { path = "./mock-redis", package = "mock-redis" }
glide-core = { path = "./mock-glide-core",  package = "mock-glide-core" }
tokio = { version = "^1", features = ["rt", "macros", "rt-multi-thread", "time"] }

[lib]
path = "../src/lib.rs"
